--- a/philo/Makefile
+++ b/philo/Makefile
@@ -25,9 +25,9 @@ LFLAGS	:= $(addprefix -L,$(LIBDIRS))
 LIBS	:= 
 
 CC	:= cc
-CFLAGS	:= -Wall -Wextra -Werror -lpthread -fsanitize=thread -g
-#CFLAGS	:= -Wall -Wextra -Werror
-LDFLAGS := $(IFLAGS) $(LFLAGS)
+#CFLAGS	:= -Wall -Wextra -Werror -lpthread -fsanitize=thread -g3
+CFLAGS	:= -Wall -Wextra -Werror
+LDFLAGS := $(IFLAGS) $(LFLAGS) -lpthread
 
 all:
 	@make $(NAME)	
